<resources>
    <string name="app_name">Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="button0">0</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="buttonAdd">+</string>
    <string name="buttonSubtract">-</string>
    <string name="buttonMultiply">*</string>
    <string name="buttonDivide">/</string>
    <string name="buttonToggleSign">+/-</string>
    <string name="buttonDecimalPoint">.</string>
    <string name="buttonEquals">=</string>
    <string name="buttonClear">AC</string>
    <string name="buttonStoreInMemory">MS</string>
    <string name="buttonLog">log</string>
    <string name="buttonBackspace">C</string>
    <string name="buttonPI">PI</string>
    <string name="buttonFactorial">x!</string>
    <string name="buttonSquareRoot">√</string>
    <string name="buttonPower">^</string>
    <string name="buttonInvert">1/x</string>
    <string name="buttonPercent">%</string>
    <string name="buttonSine">sin</string>
    <string name="buttonCosine">cos</string>
    <string name="buttonTangent">tan</string>
</resources>