<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewDisplay"
        style="@style/DisplayStyle"
        android:layout_width="410dp"
        android:layout_height="150dp"
        android:layout_weight="1"
        android:text="0"
        app:layout_constraintBottom_toTopOf="@+id/buttonClear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonBackspace"
        android:layout_width="100dp"
        android:layout_height="80dp"

        android:layout_weight="1"
        android:text="@string/buttonBackspace"
        android:theme="@style/FunctionButtonStyle"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintStart_toStartOf="@+id/buttonClear" />

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="405dp"
        android:layout_height="80dp"
        android:layout_weight="1"
        android:text="@string/buttonClear"
        android:theme="@style/MemoryButtonStyle"
        app:layout_constraintBottom_toTopOf="@+id/buttonBackspace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/buttonPercent"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_weight="1"
        android:singleLine="false"
        android:text="@string/buttonPercent"
        android:theme="@style/FunctionButtonStyle"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/buttonBackspace"
        app:layout_constraintTop_toBottomOf="@+id/buttonClear" />

    <Button
        android:id="@+id/buttonToggleSign"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_weight="1"
        android:text="@string/buttonToggleSign"
        android:theme="@style/FunctionButtonStyle"
        app:layout_constraintBottom_toTopOf="@+id/buttonDivide"
        app:layout_constraintEnd_toStartOf="@+id/buttonDivide"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonPercent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDivide" />

    <Button
        android:id="@+id/buttonDivide"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_weight="1"
        android:text="@string/buttonDivide"
        android:theme="@style/FunctionButtonStyle"
        app:layout_constraintBottom_toTopOf="@+id/buttonMultiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonToggleSign" />

    <Button
        android:id="@+id/button7"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_weight="1"
        android:text="@string/button7"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <Button
        android:id="@+id/button8"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_weight="1"
        android:text="@string/button8"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintEnd_toStartOf="@+id/button9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <Button
        android:id="@+id/button9"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_weight="1"
        android:text="@string/button9"
        app:layout_constraintBottom_toTopOf="@+id/buttonMultiply"
        app:layout_constraintEnd_toStartOf="@+id/buttonMultiply"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/buttonMultiply" />

    <!-- Row 4 -->

    <Button
        android:id="@+id/buttonMultiply"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_marginBottom="4dp"
        android:layout_weight="1"
        android:text="@string/buttonMultiply"
        android:theme="@style/FunctionButtonStyle"
        app:layout_constraintBottom_toTopOf="@+id/buttonSubtract"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button9" />

    <Button
        android:id="@+id/button4"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_weight="1"
        android:text="@string/button4"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button5"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_weight="1"
        android:text="@string/button5"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button6"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_weight="1"
        android:text="@string/button6"
        app:layout_constraintBottom_toTopOf="@+id/buttonSubtract"
        app:layout_constraintEnd_toStartOf="@+id/buttonSubtract"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/buttonSubtract" />

    <!-- Row 5 -->

    <Button
        android:id="@+id/buttonSubtract"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_weight="1"
        android:text="@string/buttonSubtract"
        android:theme="@style/FunctionButtonStyle"
        app:layout_constraintBottom_toTopOf="@+id/buttonAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button6" />

    <Button
        android:id="@+id/button1"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_weight="1"
        android:text="@string/button1"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_weight="1"
        android:text="@string/button2"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button3"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_weight="1"
        android:text="@string/button3"
        app:layout_constraintBottom_toTopOf="@+id/buttonAdd"
        app:layout_constraintEnd_toStartOf="@+id/buttonAdd"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/buttonAdd" />

    <!-- Row 6 -->

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_weight="1"
        android:text="@string/buttonAdd"
        android:theme="@style/FunctionButtonStyle"
        app:layout_constraintBottom_toTopOf="@+id/buttonEquals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button3" />

    <Button
        android:id="@+id/button0"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:text="@string/button0"
        app:layout_constraintBottom_toTopOf="@+id/buttonDecimalPoint"
        app:layout_constraintEnd_toStartOf="@+id/buttonDecimalPoint"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDecimalPoint" />

    <Button
        android:id="@+id/buttonDecimalPoint"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:text="@string/buttonDecimalPoint"
        app:layout_constraintBottom_toTopOf="@+id/buttonEquals"
        app:layout_constraintEnd_toStartOf="@+id/buttonEquals"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/button0"
        app:layout_constraintTop_toBottomOf="@+id/buttonEquals" />

    <Button
        android:id="@+id/buttonEquals"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_marginBottom="16dp"
        android:text="@string/buttonEquals"
        android:theme="@style/FunctionButtonStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/buttonDecimalPoint" />


</androidx.constraintlayout.widget.ConstraintLayout>